[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/Fonts/markazi_text_24pt.tres" type="DynamicFont" id=1]
[ext_resource path="res://Managers/StatusIcons/StatusIconManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/StyleBoxes/CardFront.tres" type="StyleBox" id=4]
[ext_resource path="res://Themes/StyleBoxes/CardTitleStyleBox.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/ActionsBoard/OpponentActions/OpponentActions.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sourced/Icons/FontAwesome/fire_solid_white.png" type="Texture" id=8]
[ext_resource path="res://Managers/Openings/OpeningsManager.gd" type="Script" id=9]
[ext_resource path="res://Assets/Sourced/Icons/GlyphsterUnlimited/1x/medical_healthcare_heart.png" type="Texture" id=11]

[node name="OpponentActions" type="Control"]
margin_right = 400.0
margin_bottom = 72.0
rect_min_size = Vector2( 400, 72 )
size_flags_horizontal = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_left = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_right = 398.0
margin_bottom = 368.0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 64.0
rect_min_size = Vector2( 396, 64 )
mouse_filter = 2
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 388.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 372.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="NicknameLabel" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer"]
margin_right = 118.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Opponent"
align = 1
valign = 1

[node name="HealthStat" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 240.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer/HealthStat"]
margin_top = 1.0
margin_right = 78.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "## / ##"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer/HealthStat"]
modulate = Color( 0.803922, 0.0392157, 0.0392157, 1 )
margin_left = 86.0
margin_right = 118.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 11 )
stretch_mode = 4

[node name="EnergyStat" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 244.0
margin_right = 364.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyLabel" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer/EnergyStat"]
margin_top = 1.0
margin_right = 80.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "# / #"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer/EnergyStat"]
modulate = Color( 1, 0.411765, 0.729412, 1 )
margin_left = 88.0
margin_right = 120.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 8 )
stretch_mode = 4

[node name="StatusesMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 396.0
margin_bottom = 104.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="StatusIconManager" parent="MarginContainer/VBoxContainer/StatusesMargin" instance=ExtResource( 2 )]
margin_left = 8.0
margin_right = 388.0
margin_bottom = 36.0

[node name="OpeningsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 396.0
margin_bottom = 368.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeningsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OpeningsMargin"]
margin_left = 8.0
margin_right = 388.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3

[node name="Opponents" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OpeningsMargin/OpeningsContainer"]
margin_right = 380.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="Players" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OpeningsMargin/OpeningsContainer"]
margin_top = 132.0
margin_right = 380.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 128 )
size_flags_vertical = 3
script = ExtResource( 9 )
